[gd_scene load_steps=10 format=3 uid="uid://b7c0b112pan5i"]

[ext_resource type="Script" path="res://scene and scripts/Extras/tree.gd" id="1_4m23v"]
[ext_resource type="Texture2D" uid="uid://b16k7o0lk4hat" path="res://Assets/Tiny Swords (Update 010)/Resources/Trees/Tree.png" id="1_cgcv0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_opi3v"]
atlas = ExtResource("1_cgcv0")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtg1m"]
atlas = ExtResource("1_cgcv0")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_darnt"]
atlas = ExtResource("1_cgcv0")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r35d6"]
atlas = ExtResource("1_cgcv0")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf57l"]
atlas = ExtResource("1_cgcv0")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5efp"]
atlas = ExtResource("1_cgcv0")
region = Rect2(576, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_8edhl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opi3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtg1m")
}],
"loop": false,
"name": &"Cutting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_darnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r35d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf57l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5efp")
}],
"loop": true,
"name": &"Normal",
"speed": 5.0
}]

[node name="Tree" type="StaticBody2D"]
collision_layer = 128
collision_mask = 16
script = ExtResource("1_4m23v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_8edhl")
animation = &"Normal"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(3, -92, 4, -92, 4, -87, 5, -87, 5, -83, 6, -83, 6, -81, 7, -81, 7, -79, 8, -79, 8, -77, 9, -77, 9, -75, 10, -75, 10, -72, 11, -72, 11, -70, 12, -70, 12, -68, 13, -68, 13, -66, 14, -66, 14, -63, 15, -63, 15, -62, 16, -62, 16, -60, 17, -60, 17, -59, 18, -59, 18, -57, 19, -57, 19, -55, 20, -55, 20, -54, 21, -54, 21, -53, 22, -53, 22, -52, 23, -52, 23, -51, 24, -51, 24, -50, 27, -50, 27, -47, 26, -47, 26, -46, 24, -46, 24, -45, 20, -45, 20, -44, 21, -44, 21, -41, 22, -41, 22, -39, 23, -39, 23, -37, 24, -37, 24, -36, 25, -36, 25, -35, 26, -35, 26, -34, 27, -34, 27, -33, 28, -33, 28, -32, 30, -32, 30, -31, 32, -31, 32, -30, 36, -30, 36, -26, 35, -26, 35, -25, 33, -25, 33, -24, 31, -24, 31, -23, 32, -23, 32, -22, 33, -22, 33, -21, 34, -21, 34, -19, 35, -19, 35, -18, 36, -18, 36, -17, 37, -17, 37, -16, 38, -16, 38, -15, 39, -15, 39, -14, 41, -14, 41, -13, 44, -13, 44, -10, 43, -10, 43, -9, 41, -9, 41, -8, 39, -8, 39, -7, 34, -7, 34, -6, 35, -6, 35, -5, 36, -5, 36, -4, 40, -4, 40, -2, 39, -2, 39, -1, 38, -1, 38, 0, 37, 0, 37, 1, 38, 1, 38, 3, 39, 3, 39, 4, 40, 4, 40, 5, 41, 5, 41, 6, 43, 6, 43, 7, 44, 7, 44, 8, 45, 8, 45, 9, 47, 9, 47, 10, 49, 10, 49, 12, 48, 12, 48, 13, 47, 13, 47, 14, 41, 14, 41, 15, 44, 15, 44, 18, 43, 18, 43, 19, 41, 19, 41, 20, 38, 20, 38, 21, 39, 21, 39, 24, 40, 24, 40, 25, 41, 25, 41, 27, 42, 27, 42, 28, 43, 28, 43, 29, 44, 29, 44, 30, 45, 30, 45, 31, 48, 31, 48, 32, 51, 32, 51, 33, 58, 33, 58, 37, 57, 37, 57, 38, 55, 38, 55, 39, 53, 39, 53, 40, 51, 40, 51, 41, 50, 41, 50, 42, 42, 42, 42, 43, 47, 43, 47, 44, 51, 44, 51, 46, 50, 46, 50, 47, 49, 47, 49, 48, 48, 48, 48, 49, 47, 49, 47, 50, 46, 50, 46, 51, 45, 51, 45, 52, 43, 52, 43, 53, 42, 53, 42, 54, 41, 54, 41, 56, 40, 56, 40, 58, 39, 58, 39, 59, 38, 59, 38, 60, 37, 60, 37, 61, 32, 61, 32, 62, 24, 62, 24, 64, 23, 64, 23, 65, 22, 65, 22, 66, 20, 66, 20, 67, 15, 67, 15, 66, 13, 66, 13, 67, 14, 67, 14, 68, 15, 68, 15, 70, 16, 70, 16, 71, 17, 71, 17, 73, 12, 73, 12, 72, 11, 72, 11, 75, 8, 75, 8, 76, 3, 76, 3, 75, 0, 75, 0, 76, -3, 76, -4, 76, -4, 77, -8, 77, -8, 76, -10, 76, -10, 75, -11, 75, -11, 74, -13, 74, -13, 70, -15, 70, -15, 69, -14, 69, -14, 68, -13, 68, -13, 67, -12, 67, -12, 66, -11, 66, -11, 65, -10, 65, -10, 63, -11, 63, -11, 64, -13, 64, -13, 65, -22, 65, -22, 64, -24, 64, -24, 63, -25, 63, -25, 62, -26, 62, -26, 61, -27, 61, -27, 60, -28, 60, -28, 58, -23, 58, -23, 57, -21, 57, -21, 56, -20, 56, -20, 55, -24, 55, -24, 56, -26, 56, -26, 57, -34, 57, -34, 56, -37, 56, -37, 55, -39, 55, -39, 54, -42, 54, -42, 53, -43, 53, -43, 52, -44, 52, -44, 51, -45, 51, -45, 48, -40, 48, -40, 47, -38, 47, -38, 46, -37, 46, -37, 45, -45, 45, -45, 44, -48, 44, -48, 43, -49, 43, -49, 42, -51, 42, -51, 41, -52, 41, -52, 40, -53, 40, -53, 37, -50, 37, -50, 36, -47, 36, -47, 35, -46, 35, -46, 34, -48, 34, -48, 33, -49, 33, -49, 32, -50, 32, -50, 31, -51, 31, -51, 29, -46, 29, -46, 28, -43, 28, -43, 27, -42, 27, -42, 26, -43, 26, -43, 25, -45, 25, -45, 24, -46, 24, -46, 23, -47, 23, -47, 19, -44, 19, -44, 18, -42, 18, -42, 17, -39, 17, -39, 16, -37, 16, -37, 15, -35, 15, -35, 14, -34, 14, -34, 13, -36, 13, -36, 12, -39, 12, -39, 11, -40, 11, -40, 10, -42, 10, -42, 6, -36, 6, -36, 5, -33, 5, -33, 4, -32, 4, -32, 3, -31, 3, -31, 2, -30, 2, -30, 1, -29, 1, -29, 0, -34, 0, -34, -1, -36, -1, -36, -2, -37, -2, -37, -3, -38, -3, -38, -6, -35, -6, -35, -7, -34, -7, -34, -8, -32, -8, -32, -9, -31, -9, -31, -10, -29, -10, -29, -11, -28, -11, -28, -12, -27, -12, -27, -13, -26, -13, -26, -14, -25, -14, -25, -15, -24, -15, -24, -16, -23, -16, -23, -17, -22, -17, -22, -18, -24, -18, -24, -19, -26, -19, -26, -21, -28, -21, -28, -22, -31, -22, -31, -23, -32, -23, -32, -25, -33, -25, -33, -27, -29, -27, -29, -28, -27, -28, -27, -29, -25, -29, -25, -30, -23, -30, -23, -31, -22, -31, -22, -32, -20, -32, -20, -33, -19, -33, -19, -35, -18, -35, -18, -37, -17, -37, -17, -38, -16, -38, -16, -40, -15, -40, -15, -42, -19, -42, -19, -43, -22, -43, -22, -44, -23, -44, -23, -48, -19, -48, -19, -49, -17, -49, -17, -50, -16, -50, -16, -51, -15, -51, -15, -52, -14, -52, -14, -53, -13, -53, -13, -55, -12, -55, -12, -57, -11, -57, -11, -59, -10, -59, -10, -61, -9, -61, -9, -63, -8, -63, -8, -65, -7, -65, -7, -67, -6, -67, -6, -69, -5, -69, -5, -71, -4, -71, -4, -73, -3, -73, -3, -76, -2, -76, -2, -78, -1, -78, -1, -81, 0, -81, 0, -83, 1, -83, 1, -86, 2, -86, 2, -89, 3, -89)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="DetectionArea"]
scale = Vector2(1.1, 1.1)
polygon = PackedVector2Array(3, -92, 4, -92, 4, -87, 5, -87, 5, -83, 6, -83, 6, -81, 7, -81, 7, -79, 8, -79, 8, -77, 9, -77, 9, -75, 10, -75, 10, -72, 11, -72, 11, -70, 12, -70, 12, -68, 13, -68, 13, -66, 14, -66, 14, -63, 15, -63, 15, -62, 16, -62, 16, -60, 17, -60, 17, -59, 18, -59, 18, -57, 19, -57, 19, -55, 20, -55, 20, -54, 21, -54, 21, -53, 22, -53, 22, -52, 23, -52, 23, -51, 24, -51, 24, -50, 27, -50, 27, -47, 26, -47, 26, -46, 24, -46, 24, -45, 20, -45, 20, -44, 21, -44, 21, -41, 22, -41, 22, -39, 23, -39, 23, -37, 24, -37, 24, -36, 25, -36, 25, -35, 26, -35, 26, -34, 27, -34, 27, -33, 28, -33, 28, -32, 30, -32, 30, -31, 32, -31, 32, -30, 36, -30, 36, -26, 35, -26, 35, -25, 33, -25, 33, -24, 31, -24, 31, -23, 32, -23, 32, -22, 33, -22, 33, -21, 34, -21, 34, -19, 35, -19, 35, -18, 36, -18, 36, -17, 37, -17, 37, -16, 38, -16, 38, -15, 39, -15, 39, -14, 41, -14, 41, -13, 44, -13, 44, -10, 43, -10, 43, -9, 41, -9, 41, -8, 39, -8, 39, -7, 34, -7, 34, -6, 35, -6, 35, -5, 36, -5, 36, -4, 40, -4, 40, -2, 39, -2, 39, -1, 38, -1, 38, 0, 37, 0, 37, 1, 38, 1, 38, 3, 39, 3, 39, 4, 40, 4, 40, 5, 41, 5, 41, 6, 43, 6, 43, 7, 44, 7, 44, 8, 45, 8, 45, 9, 47, 9, 47, 10, 49, 10, 49, 12, 48, 12, 48, 13, 47, 13, 47, 14, 41, 14, 41, 15, 44, 15, 44, 18, 43, 18, 43, 19, 41, 19, 41, 20, 38, 20, 38, 21, 39, 21, 39, 24, 40, 24, 40, 25, 41, 25, 41, 27, 42, 27, 42, 28, 43, 28, 43, 29, 44, 29, 44, 30, 45, 30, 45, 31, 48, 31, 48, 32, 51, 32, 51, 33, 58, 33, 58, 37, 57, 37, 57, 38, 55, 38, 55, 39, 53, 39, 53, 40, 51, 40, 51, 41, 50, 41, 50, 42, 42, 42, 42, 43, 47, 43, 47, 44, 51, 44, 51, 46, 50, 46, 50, 47, 49, 47, 49, 48, 48, 48, 48, 49, 47, 49, 47, 50, 46, 50, 46, 51, 45, 51, 45, 52, 43, 52, 43, 53, 42, 53, 42, 54, 41, 54, 41, 56, 40, 56, 40, 58, 39, 58, 39, 59, 38, 59, 38, 60, 37, 60, 37, 61, 32, 61, 32, 62, 24, 62, 24, 64, 23, 64, 23, 65, 22, 65, 22, 66, 20, 66, 20, 67, 15, 67, 15, 66, 13, 66, 13, 67, 14, 67, 14, 68, 15, 68, 15, 70, 16, 70, 16, 71, 17, 71, 17, 73, 12, 73, 12, 72, 11, 72, 11, 75, 8, 75, 8, 76, 3, 76, 3, 75, 0, 75, 0, 76, -3, 76, -4, 76, -4, 77, -8, 77, -8, 76, -10, 76, -10, 75, -11, 75, -11, 74, -13, 74, -13, 70, -15, 70, -15, 69, -14, 69, -14, 68, -13, 68, -13, 67, -12, 67, -12, 66, -11, 66, -11, 65, -10, 65, -10, 63, -11, 63, -11, 64, -13, 64, -13, 65, -22, 65, -22, 64, -24, 64, -24, 63, -25, 63, -25, 62, -26, 62, -26, 61, -27, 61, -27, 60, -28, 60, -28, 58, -23, 58, -23, 57, -21, 57, -21, 56, -20, 56, -20, 55, -24, 55, -24, 56, -26, 56, -26, 57, -34, 57, -34, 56, -37, 56, -37, 55, -39, 55, -39, 54, -42, 54, -42, 53, -43, 53, -43, 52, -44, 52, -44, 51, -45, 51, -45, 48, -40, 48, -40, 47, -38, 47, -38, 46, -37, 46, -37, 45, -45, 45, -45, 44, -48, 44, -48, 43, -49, 43, -49, 42, -51, 42, -51, 41, -52, 41, -52, 40, -53, 40, -53, 37, -50, 37, -50, 36, -47, 36, -47, 35, -46, 35, -46, 34, -48, 34, -48, 33, -49, 33, -49, 32, -50, 32, -50, 31, -51, 31, -51, 29, -46, 29, -46, 28, -43, 28, -43, 27, -42, 27, -42, 26, -43, 26, -43, 25, -45, 25, -45, 24, -46, 24, -46, 23, -47, 23, -47, 19, -44, 19, -44, 18, -42, 18, -42, 17, -39, 17, -39, 16, -37, 16, -37, 15, -35, 15, -35, 14, -34, 14, -34, 13, -36, 13, -36, 12, -39, 12, -39, 11, -40, 11, -40, 10, -42, 10, -42, 6, -36, 6, -36, 5, -33, 5, -33, 4, -32, 4, -32, 3, -31, 3, -31, 2, -30, 2, -30, 1, -29, 1, -29, 0, -34, 0, -34, -1, -36, -1, -36, -2, -37, -2, -37, -3, -38, -3, -38, -6, -35, -6, -35, -7, -34, -7, -34, -8, -32, -8, -32, -9, -31, -9, -31, -10, -29, -10, -29, -11, -28, -11, -28, -12, -27, -12, -27, -13, -26, -13, -26, -14, -25, -14, -25, -15, -24, -15, -24, -16, -23, -16, -23, -17, -22, -17, -22, -18, -24, -18, -24, -19, -26, -19, -26, -21, -28, -21, -28, -22, -31, -22, -31, -23, -32, -23, -32, -25, -33, -25, -33, -27, -29, -27, -29, -28, -27, -28, -27, -29, -25, -29, -25, -30, -23, -30, -23, -31, -22, -31, -22, -32, -20, -32, -20, -33, -19, -33, -19, -35, -18, -35, -18, -37, -17, -37, -17, -38, -16, -38, -16, -40, -15, -40, -15, -42, -19, -42, -19, -43, -22, -43, -22, -44, -23, -44, -23, -48, -19, -48, -19, -49, -17, -49, -17, -50, -16, -50, -16, -51, -15, -51, -15, -52, -14, -52, -14, -53, -13, -53, -13, -55, -12, -55, -12, -57, -11, -57, -11, -59, -10, -59, -10, -61, -9, -61, -9, -63, -8, -63, -8, -65, -7, -65, -7, -67, -6, -67, -6, -69, -5, -69, -5, -71, -4, -71, -4, -73, -3, -73, -3, -76, -2, -76, -2, -78, -1, -78, -1, -81, 0, -81, 0, -83, 1, -83, 1, -86, 2, -86, 2, -89, 3, -89)

[node name="DamageCoolDown" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="DamageCoolDown" to="." method="_on_damage_cool_down_timeout"]
